--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="xx_chemin_de_xxxx">XX Chemin de XXXX</string>
     <string name="_12345_ville">12345 Ville</string>
     <string name="adresse">Adresse</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
